compile_log.txt
srcs/vector/swap.cpp:10:56: error: no viable conversion from 'vector_iterator<ft::vector<int, std::__1::allocator<int> >::value_type>' to 'vector_iterator<const ft::vector<int, std::__1::allocator<int> >::value_type>'
        TESTED_NAMESPACE::vector<TESTED_TYPE>::const_iterator it_foo = foo.begin();
                                                              ^        ~~~~~~~~~~~
./../include/./iterators/vector_iterator.hpp:41:3: note: candidate constructor not viable: no known conversion from 'ft::vector<int, std::__1::allocator<int> >::iterator' (aka 'vector_iterator<int>') to 'ft::vector_iterator<const int>::pointer' (aka 'const int *') for 1st argument
                vector_iterator(pointer ptr) :_ptr(ptr) {}
                ^
./../include/./iterators/vector_iterator.hpp:43:3: note: candidate constructor not viable: no known conversion from 'ft::vector<int, std::__1::allocator<int> >::iterator' (aka 'vector_iterator<int>') to 'const ft::vector_iterator<const int> &' for 1st argument
                vector_iterator(const vector_iterator &src) :_ptr(src._ptr) {}
                ^
srcs/vector/swap.cpp:11:56: error: no viable conversion from 'vector_iterator<ft::vector<int, std::__1::allocator<int> >::value_type>' to 'vector_iterator<const ft::vector<int, std::__1::allocator<int> >::value_type>'
        TESTED_NAMESPACE::vector<TESTED_TYPE>::const_iterator it_bar = bar.begin();
                                                              ^        ~~~~~~~~~~~
./../include/./iterators/vector_iterator.hpp:41:3: note: candidate constructor not viable: no known conversion from 'ft::vector<int, std::__1::allocator<int> >::iterator' (aka 'vector_iterator<int>') to 'ft::vector_iterator<const int>::pointer' (aka 'const int *') for 1st argument
                vector_iterator(pointer ptr) :_ptr(ptr) {}
                ^
./../include/./iterators/vector_iterator.hpp:43:3: note: candidate constructor not viable: no known conversion from 'ft::vector<int, std::__1::allocator<int> >::iterator' (aka 'vector_iterator<int>') to 'const ft::vector_iterator<const int> &' for 1st argument
                vector_iterator(const vector_iterator &src) :_ptr(src._ptr) {}
                ^
2 errors generated.
